@@ -1,4 +1,7 @@
 release 1.9
+- Fixed issue 737
+  http://java.net/jira/browse/JERSEY-737
+  javadoc typo
 - *Breaking change*
    Updating wadl namespace from "http://research.sun.com/wadl/2006/10" to
     "http://wadl.dev.java.net/2009/02". WADL format changed slightly too, see
